; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/olpc_dcon/extr_olpc_dcon.c_dcon_set_source.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/olpc_dcon/extr_olpc_dcon.c_dcon_set_source.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dcon_priv = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dcon_priv*, i32)* @dcon_set_source to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dcon_set_source(%struct.dcon_priv* %0, i32 %1) #0 {
  %3 = alloca %struct.dcon_priv*, align 8
  %4 = alloca i32, align 4
  store %struct.dcon_priv* %0, %struct.dcon_priv** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.dcon_priv*, %struct.dcon_priv** %3, align 8
  %6 = getelementptr inbounds %struct.dcon_priv, %struct.dcon_priv* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %24

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.dcon_priv*, %struct.dcon_priv** %3, align 8
  %14 = getelementptr inbounds %struct.dcon_priv, %struct.dcon_priv* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  %15 = load %struct.dcon_priv*, %struct.dcon_priv** %3, align 8
  %16 = getelementptr inbounds %struct.dcon_priv, %struct.dcon_priv* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %4, align 4
  %19 = icmp ne i32 %17, %18
  br i1 %19, label %20, label %24

20:                                               ; preds = %11
  %21 = load %struct.dcon_priv*, %struct.dcon_priv** %3, align 8
  %22 = getelementptr inbounds %struct.dcon_priv, %struct.dcon_priv* %21, i32 0, i32 2
  %23 = call i32 @schedule_work(i32* %22)
  br label %24

24:                                               ; preds = %10, %20, %11
  ret void
}

declare dso_local i32 @schedule_work(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
